--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,14 +54,11 @@
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true" />
+
         <!-- Camera Activity -->
-        <activity android:name=".StolenCars"
+        <activity
+            android:name=".StolenCars"
             tools:ignore="MissingClass" />
 
         <!-- EmailPassword Activity -->
