--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,10 @@
             android:name=".EmailPassword"
             tools:ignore="MissingClass" />
 
+        <activity
+            android:name=".PhotoNumber"
+            tools:ignore="MissingClass" />
+
     </application>
 
 </manifest>
