--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,9 @@ tensorflowLite = "2.13.0"
 tensorflowLiteSupport = "0.4.4"
 litertApi = "1.0.1"
 litertSupportApi = "1.0.1"
+monitor = "1.7.2"
+junitKtx = "1.2.1"
+activity = "1.8.0"
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose" }
@@ -68,6 +71,9 @@ androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
 litert-metadata = { group = "com.google.ai.edge.litert", name = "litert-metadata", version.ref = "litertMetadata" }
 litert-api = { group = "com.google.ai.edge.litert", name = "litert-api", version.ref = "litertApi" }
 litert-support-api = { group = "com.google.ai.edge.litert", name = "litert-support-api", version.ref = "litertSupportApi" }
+androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
