--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,15 @@
 [versions]
 agp = "8.7.2"
 appcompatVersion = "1.6.1"
+cameraCamera2 = "1.4.1"
+cameraCore = "1.4.1"
+cameraLifecycle = "1.4.1"
+cameraView = "1.4.1"
 constraintlayout = "2.2.0"
 constraintlayoutVersion = "2.1.4"
 coreKtxVersion = "1.12.0"
 firebaseAuthKtx = "23.1.0"
+firebaseBom = "33.10.0"
 interpolator = "1.0.0"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
@@ -17,6 +22,7 @@ composeBom = "2024.04.01"
 appcompat = "1.7.0"
 lifecycleRuntimeKtxVersion = "2.6.1"
 material = "1.12.0"
+okhttp = "4.12.0"
 recyclerview = "1.3.2"
 firebaseMessagingKtx = "24.1.0"
 core = "1.13.0"
@@ -32,6 +38,10 @@ activity = "1.8.0"
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose" }
 androidx-appcompat-v161 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCamera2" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraCore" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraLifecycle" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 androidx-constraintlayout-v214 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,6 +54,7 @@ androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-view
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-messaging = { module = "com.google.firebase:firebase-messaging" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -61,6 +72,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 material3 = { module = "androidx.compose.material3:material3" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 tensorflow-lite = { module = "org.tensorflow:tensorflow-lite", version.ref = "tensorflowLite" }
 tensorflow-lite-support = { module = "org.tensorflow:tensorflow-lite-support", version.ref = "tensorflowLiteSupport" }
 ui = { module = "androidx.compose.ui:ui" }
